# Kamodo

./: .dockerignore  .gitignore  404.html  =2.0.0  ADELPHI_20100503_SP_0138UT.pptx  API.Dockerfile  ComingSoon.html  ContributionGuidelines.html  ContributionGuidelines.md  Dockerfile  Kamodo_CCMC_InstallationInstructions.md  Kamodo_CCMC_InstallationInstructions.txt  LICENSE  MANIFEST.in  ModelReaderInstructions.html  ModelReaderInstructions.md  QuickStart.md  README  README.md  WorkLog.md  ctipe_4D.py  ctipe_data_wrapper.py  docker-compose.yaml  gitm_4Dcdf.py  hapi.py  hourly.yaml  index.html  iri_4D.py  kamodo-pysat.yaml  kamodo.py  kamodo.yaml  mkdocs.yml  pyproject.toml  reader_utilities.py  requirements.txt  search.html  setup.cfg  setup.py  sitemap.xml  test_kamodo.py
.github/workflows/: build-wheels.yml  ci.yml  kamodo-package.yml  python-package.yml
Notebooks/: Test
Tutorials/: ConstellationTutorial_CartesianCoords.ipynb  ConstellationTutorial_DifferingGrids_OrbitSlicing.ipynb  ConstellationTutorial_IrregularConstellations.ipynb  ConstellationTutorial_SphericalCoords.ipynb  DataFunctionalization.ipynb  FakeFlightDemo.ipynb  HAPI.ipynb  InputOutputDemo.ipynb  Kamodo_pysat_ModelDataComparison.ipynb  ModelDataComparison_EnsembleModeling.ipynb  ModelFlythroughDemo.ipynb  ModelReaderDemo_ThreeReaders.ipynb  Model_Data_Comparison-ROR.ipynb  Model_Data_Comparison-TIEGCM.ipynb  MyFlightDemo.ipynb  OpenGGCM_GM_convert_to_NetCDF.ipynb  RealFlightDemo.ipynb  RealFlightExample_GITM.txt  ReconstructionTutorial_CartesianCoords.ipynb  ReconstructionTutorial_DifferingGrids_OrbitSlicing.ipynb  ReconstructionTutorial_IrregularConstellations.ipynb  START_HERE.ipynb  Trajectory_Coords_Plots.ipynb  VERB-3D_plotting_examples.ipynb  run_notebooks.py
Tutorials/_old/: CTIPe_singletime.ipynb  GITM.ipynb  GITM_examples.ipynb  SWMF-GM_example.ipynb  SWMF_IE.ipynb  Tsyganenko.ipynb
Validation/: ModelReaderTesting.xlsx  ModelValidation.xlsx  Validation of SWMF-IE Kamodo interpolator and against online Visualization.docx  VariableSpreadsheetITM_v0p3.xlsx  test
Validation/Notebooks/: ModelReaderTesting_ADELPHI.ipynb  ModelReaderTesting_ADELPHItiming.ipynb  ModelReaderTesting_AMGeO.ipynb  ModelReaderTesting_AMGeOtiming.ipynb  ModelReaderTesting_CTIPe.ipynb  ModelReaderTesting_CTIPetiming.ipynb  ModelReaderTesting_DTM.ipynb  ModelReaderTesting_GAMERA.ipynb  ModelReaderTesting_GITM.ipynb  ModelReaderTesting_GITMtiming.ipynb  ModelReaderTesting_IRI.ipynb  ModelReaderTesting_IRItiming.ipynb  ModelReaderTesting_MARBLE.ipynb  ModelReaderTesting_OpenGGCMGM.ipynb  ModelReaderTesting_OpenGGCM_IE.ipynb  ModelReaderTesting_OvationPrime.ipynb  ModelReaderTesting_SWMFGM.ipynb  ModelReaderTesting_SWMFGMtiming.ipynb  ModelReaderTesting_SWMFIE.ipynb  ModelReaderTesting_SWMFIEtiming.ipynb  ModelReaderTesting_SuperDARNdf_second.ipynb  ModelReaderTesting_SuperDARNequ.ipynb  ModelReaderTesting_SuperDARNequtiming.ipynb  ModelReaderTesting_SuperDARNuni.ipynb  ModelReaderTesting_SuperDARNunitiming.ipynb  ModelReaderTesting_TIEGCM.ipynb  ModelReaderTesting_TIEGCMtiming.ipynb  ModelReaderTesting_Tsyganenko05.ipynb  ModelReaderTesting_VERB-3D.ipynb  ModelReaderTesting_WACCMX.ipynb  ModelReaderTesting_WACCMXtiming.ipynb  ModelReaderTesting_WAMIPE.ipynb  ModelReaderTesting_WAMIPEtiming.ipynb  ModelReaderTesting_Weimer.ipynb  ModelReaderTesting_Weimertiming.ipynb
about/: index.html
additional_resources/: index.html
cli/: main.py
cli/conf/: config.yaml  kamodo.yaml
dockerfiles/: API.Dockerfile  CCMC_Satellite-Extractions.Dockerfile  dockerfile_jb2008  dockerfile_tsyganenko  kamodo-wrap.Dockerfile  kamodo_ccmc_readers.Dockerfile  satellite_extractions.Dockerfile  spacepy.Dockerfile
docs/: PyPI-Release.md  README.md  about.md  additional_resources.md  index.md
docs/notebooks/: AdvancedPlottingRoutines-Pieces.ipynb  (+72 more)
examples/: README.md  gitm.yaml  hapi.yaml  ror_satextract.yaml
kamodo/: __init__.py  kamodo.py  plotting.py  test_kamodo.py  test_plotting.py  test_utils.py  util.py
kamodo_ccmc/: __init__.py  build_tools.py
kamodo_ccmc/kamodo-wrapper/: CMakeLists.txt  FortranWrapper.f90  KamodoWrapper.cpp  KamodoWrapper.h  Makefile  README.md  cleanup.sh  conda.Dockerfile  get_defaults.py  kamodo.yaml  kamodo_example.py  test.cpp  yaml-cpp-config.cmake  yaml-cpp-targets.cmake
kamodo_ccmc/kamodo-wrapper/examples/: call_with_defaults.f90  call_with_input.f90  constructor_destructor.f90  print_methods.f90
notebooks/: AdvancedPlottingRoutines-Pieces.html  AdvancedPlottingRoutines.html  ChoosingModelsAndVariables.html  ConstellationMissionPlanningToolIntro.html  ConstellationMissionPlanningToolIntro.ipynb  CoordinateConversions.html  DataFunctionalization.html  DataFunctionalization.ipynb  FlythroughCommandLine.html  FlythroughNotebook.html  FunctionalizeHAPI.html  FunctionalizingModeledDatasets.html  HowtoWriteaModelReader.html  Introduction.html  KGS_orbit_data.txt  ModelDataComparison_EnsembleModeling.ipynb  ModelFlythroughExample_TIEGCMgrace1_HmF2_1D.html  ModelFlythroughExample_TIEGCMgrace1_HmF2_3D.html  ModelReader_TestingNotebook.ipynb  Model_Data_Comparison-ROR.ipynb  Model_Data_Comparison-TIEGCM.ipynb  OpenGGCM_GM_4Dcdf_xarray.ipynb  OpenGGCM_GM_convert_to_NetCDF.ipynb  QuickStart.html  QuickStart.ipynb  ReaderMapping.csv  RealFlightDemo.ipynb  ReconstructionTutorial_CartesianCoords.ipynb  ReconstructionTutorial_SphericalCoords.ipynb  ReconstructionTutorial_SphericalCoordsTrim.ipynb  SF_EnsembleModeling.ipynb  SF_FakeFlightDemo.ipynb  SF_FakeFlight_TIEGCM.ipynb  SF_GITM_Demo.ipynb  SF_IntroFunctions.ipynb  SF_ModelFlythroughDemo.ipynb  SF_ModelFlythrough_TIEGCM.ipynb  SF_MyFlightDemo.ipynb  SF_MyFlight_TIEGCM.ipynb  SF_RealFlightDemo.ipynb  (+5 more)
notebooks-OLD/: GITM.ipynb
paper/: paper.bib  paper.md
satelliteflythrough/: CTIPe_wrapper.py  GITM_wrapper.py  SWMFIE_wrapper.py
tests/: .gitignore  test_ADELPHI.py  test_AMGeO.py  test_CTIPe.py  test_DTM.py  test_GITM.py  test_IRI.py  test_SWMF_GM.py  test_SWMF_IE.py  test_TIEGCM.py  test_timefunctions.py  test_verb4d.py  tests_verb4d.py
worklogs/: Pembroke.md
(+308 files in other folders)
