[build-system]
# No CFFI or numpy needed — shared libraries compiled via distutils/subprocess
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# Secondary abi3 declaration (authoritative config is in setup.py options)
[tool.distutils.bdist_wheel]
py-limited-api = "cp310"

# ============================================================================
# cibuildwheel configuration for building cross-platform wheels
# ============================================================================
[tool.cibuildwheel]
# Build one wheel per platform with abi3 tag (cp310-abi3-*).
# The py-limited-api config in setup.py tells bdist_wheel to emit abi3 tags,
# so a single cp310 build per platform serves all Python 3.10+ versions.
build = "cp310-*"

# Skip 32-bit, musllinux, and PyPy
skip = "*-win32 *-manylinux_i686 *-musllinux_* pp*"

# Test command to verify wheel works
test-command = "python -c \"import kamodo_ccmc; print('OK')\""

# Build in isolated environment
build-isolation = true

[tool.cibuildwheel.linux]
# Install gfortran before building
before-all = "yum install -y gcc-gfortran || (apt-get update && apt-get install -y gfortran)"

# Use manylinux2014 for broader compatibility
manylinux-x86_64-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"

[tool.cibuildwheel.macos]
# gfortran is installed via brew in the GitHub Actions workflow
# Set minimum macOS version for compatibility (11.0 for ARM compatibility)
environment = { MACOSX_DEPLOYMENT_TARGET = "11.0" }

[tool.cibuildwheel.windows]
# Windows uses MSYS2 gfortran, configured in GitHub Actions workflow
before-build = "pip install delvewheel"
repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel}"