[metadata]
name = kamodo_ccmc
version = 23.3.0
author = Darren De Zeeuw
author_email = darren.dezeeuw@nasa.gov
description = A functional api for scientific data
url = https://nasa.github.io/Kamodo/
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
	Programming Language :: Python :: 3.7
	Operating System :: OS Independent
	License :: OSI Approved
license = NASA OPEN SOURCE AGREEMENT VERSION 1.3


[options]
packages =
  kamodo_ccmc
  kamodo_ccmc.readers
  kamodo_ccmc.tools
  kamodo_ccmc.flythrough
  kamodo_ccmc.readers.OCTREE_BLOCK_GRID
  kamodo_ccmc.readers.OpenGGCM
python_requires = >= 3.6
include_package_data = True
install_requires =
  kamodo==22.5.0
  netCDF4
  cdflib
  astropy
  ipython
  jupyter
  h5py
  sgp4
  hapiclient
  spacepy

