[metadata]
name = kamodo_ccmc

version = 24.11.1

author = Darren De Zeeuw
author_email = darren.dezeeuw@nasa.gov
description = A functional api for scientific data
url = https://github.com/nasa/Kamodo
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
	Repository = https://github.com/nasa/Kamodo
	Documentation = https://nasa.github.io/Kamodo
classifiers =
	Programming Language :: Python :: 3.10
	Operating System :: OS Independent
	License :: OSI Approved
license = NASA OPEN SOURCE AGREEMENT VERSION 1.3


[options]
packages =
  kamodo_ccmc
  kamodo_ccmc.readers
  kamodo_ccmc.tools
  kamodo_ccmc.flythrough
  kamodo_ccmc.readers.OCTREE_BLOCK_GRID
  kamodo_ccmc.readers.OpenGGCM
python_requires = >= 3.10
include_package_data = True
install_requires =
  kamodo
  numpy<2.0.0
  pandas<2.0.0
  netCDF4<1.7.0
  nbformat
  cdflib
  astropy
  h5py
  sgp4
  hapiclient
  spacepy
  s3fs
  boto3
  h5netcdf
  psutil
  rbamlib
  pyverbplt>=24.9
